@@ -1,4 +1,7 @@
-2004-01-17  Kazuhiko  <kazuhiko@fdiary.net>
+2004-01-17 TADA Tadashi <sho@spc.gr.jp>
+	* misc/posttdiary.rb: support ruby 1.8.1.
+
+2004-01-17 Kazuhiko <kazuhiko@fdiary.net>
 	* tdiary.rb: use erbscan if possible.
 
 2004.01.12 Junichiro Kita <kita@kitaj.no-ip.com>
